--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,8 +143,86 @@ img{
     gap: 1.5rem;
 }
 
+.header{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+    background-color: var(--body-color);
+}
+
 /* NAV */
+.nav{
+    max-width: 968px;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__logo,
+.nav_toggle{
+    color: var(--title-colour);
+    font-weight: var(--font-medium);
+}
+
+.nav__logo:hover{
+    color: var(--first-colour);
+}
+
+@media screen and (max-width: 767px){
+    .nav__menu{
+        position: fixed;
+        bottom: -100%;
+        left: 0;
+        width: 100%;
+        background-color: var(--body-colour);
+        padding: 2rem 1.5rem 4rem;
+        box-shadow: 0 -1px 4px rgba(0,0,0,.15);
+        border-radius: 1.5rem 1.5rem 0 0;
+        transition: .3s;
+    }
+}
+
+.nav__list{
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.nav__link{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: var(--small-font-size);
+    color: var(--title-colour);
+    font-weight: var(--font-medium);
+}
+
+.nav__link:hover{
+    color: var(--first-colour);
+}
+
+.nav__icon{
+    font-size: 1.2rem;
+}
+
+.nav__close{
+    position: absolute;
+    right: 1.3rem;
+    bottom: .5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: var(--first-colour);
+}
+
+.nav__close:hover{
+    color: var(--first-colour-alt);
+}
 
 /* show menu */
+.show-menu{
+    bottom: 0;
+}
 
 /* Active Link */
